# shyftr-lab

./: .gitignore  2026-05-07-shyftr-phase-1-core-memory-model-stabilization-tranched-plan.md  2026-05-07-shyftr-phase-1-pass-off-report.md  2026-05-07-shyftr-phase-2-closeout.md  2026-05-07-shyftr-phase-2-typed-working-context-and-carry-state-tranched-plan.md  2026-05-07-shyftr-phase-3-first-class-memory-classes-tranched-plan.md  2026-05-14-shyftr-phase-4-closeout.md  2026-05-14-shyftr-phase-5-closeout.md  2026-05-14-shyftr-phase-5-handoff-packet.md  2026-05-14-shyftr-phase-5-tranche-p5-0-plan.md  2026-05-14-shyftr-phase-5-tranche-p5-1-plan.md  2026-05-15-shyftr-phase-5-closeoff.md  2026-05-15-shyftr-phase-6-closeoff.md  2026-05-15-shyftr-phase-6-handoff-packet.md  2026-05-15-shyftr-phase-6-tranche-p6-0-plan.md  2026-05-15-shyftr-phase-7-closeoff.md  2026-05-15-shyftr-phase-7-handoff-packet.md  2026-05-15-shyftr-phase-7-p7-1-closeoff.md  2026-05-15-shyftr-phase-7-p7-2-closeoff.md  2026-05-15-shyftr-phase-7-p7-3-closeoff.md  2026-05-15-shyftr-phase-7-p7-4-closeoff.md  2026-05-15-shyftr-phase-7-p7-5-closeoff.md  2026-05-15-shyftr-phase-7-tranche-p7-0-plan.md  2026-05-15-shyftr-phase-7-tranche-p7-2-plan.md  2026-05-15-shyftr-phase-7-tranche-p7-3-plan.md  2026-05-15-shyftr-phase-7-tranche-p7-4-plan.md  2026-05-15-shyftr-phase-8-evaluation-track-closeout.md  2026-05-15-shyftr-phase-8-evaluation-track-handoff-packet.md  2026-05-15-shyftr-phase-8-evaluation-track-tranched-plan.md  2026-05-15-shyftr-phase-9-ready-handoff-packet.md  2026-05-16-shyftr-phase-10-ready-handoff-packet.md  (+39 more)
(+329 files in other folders)
