[project]
name = "shyftr"
version = "0.0.0"
description = "Attachable recursive memory cells for AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ShyftR contributors" }]
license = { text = "MIT" }
keywords = ["agent-memory", "ai-agents", "local-first", "retrieval", "audit-log"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Repository = "https://github.com/stefan-mcf/shyftr"
Issues = "https://github.com/stefan-mcf/shyftr/issues"
Documentation = "https://github.com/stefan-mcf/shyftr/tree/main/docs"

[project.scripts]
shyftr = "shyftr.cli:main"
shyftr-mcp = "shyftr.mcp_server:main"

[project.optional-dependencies]
dev = ["PyYAML>=6"]
service = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "httpx>=0.27"]
lancedb = ["lancedb>=0.14"]

[project.entry-points."shyftr.adapters"]
file = "shyftr.integrations.plugins:builtin_file_adapter"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
